--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
   <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-6xl font-bold underline">
+  <div>
+    
+  </div>
+  <h1 class="text-3xl font-bold underline">
     Hello world!
   </h1>
 </body>
