--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div>
-    
+    <p class="text-red-900">Testing color</p>
   </div>
-  <h1 class="text-3xl font-bold underline">
+  <h1 class=" text-6xl font-bold text-center underline text-blue-400">
     Hello world!
   </h1>
 </body>
