added images and building html

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
+  <title>Tailwinds Recipes Excercise</title>
 </head>
 <body>
+
   <div>
-    <p class="text-red-900">Testing color</p>
+    <div>
+      <nav>
+        <div>
+          <h1 class="text-6xl font-bold text-center underline text-blue-400">
+            <a href="/">Tailwinds</a>
+          </h1>
+        </div>
+          <ul>
+            <li>
+              <a href="#">
+                <span >Home</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>About</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Contact</span>
+              </a>
+            </li>
+          </ul>
+      </nav>
+    </div>
+<!-- end navbar -->
+    <main>
+      <div>
+        <a href="#">Log in</a>
+        <a href="#">Sign up</a>
+      </div>
+      <header>
+        <h2>Recipes</h2>
+        <h3>For Hikers</h3>
+      </header>
+
+      <div>
+        <h4>Latest Recipes</h4>
+
+        <div>
+          <!-- cards go here -->
+          <div>
+            <img src="./img/cerulean Small.png" alt="Cerulean Dessert">
+            <div>
+              <span>Granola</span>
+              <span>Recipe Author</span>
+            </div>
+          </div>
+        </div>
+
+        <h4>Most Popular</h4>
+        <div>
+          <!-- cards go here -->
+        </div>
+
+        <div>
+          <div>Load More</div>
+        </div>
+      </div>
+    </main>
   </div>
-  <h1 class=" text-6xl font-bold text-center underline text-blue-400">
-    Hello world!
-  </h1>
 </body>
 </html>
