--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,20 @@
   <link href="../dist/output.css" rel="stylesheet">
   <title>Tailwinds Recipes Excercise</title>
 </head>
-<body>
+<body class="text-gray-600">
 
   <div>
     <div>
       <nav>
         <div>
-          <h1 class="text-6xl font-bold text-center underline text-blue-400">
+          <h1>
             <a href="/">Tailwinds</a>
           </h1>
         </div>
           <ul>
             <li>
               <a href="#">
-                <span >Home</span>
+                <span>Home</span>
               </a>
             </li>
             <li>
@@ -52,7 +52,7 @@
         <div>
           <!-- cards go here -->
           <div>
-            <img src="./img/cerulean Small.png" alt="Cerulean Dessert">
+            <img src="./img/avocado Small.jpeg" alt="Cerulean Dessert">
             <div>
               <span>Granola</span>
               <span>Recipe Author</span>
