--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <div>
       <nav>
         <div>
-          <h1>
-            <a href="/">Tailwinds</a>
+          <h1 class="font-bold text-2xl p-4 border-b border-gray-100 text-center uppercase">
+            <a href="/">See It Eat It || See Food</a>
           </h1>
         </div>
           <ul>
@@ -36,20 +36,20 @@
       </nav>
     </div>
 <!-- end navbar -->
-    <main>
+    <main class="px-16 py-6">
       <div>
         <a href="#">Log in</a>
         <a href="#">Sign up</a>
       </div>
       <header>
-        <h2>Recipes</h2>
-        <h3>For Hikers</h3>
+        <h2 class="text-6xl font-semibold">Erin's Brewhouse</h2>
+        <!-- <h3 class="text-2xl font-semibold">For Hikers</h3> -->
       </header>
 
       <div>
-        <h4>Latest Recipes</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b-2 border-gray-200">Current Dishes</h4>
 
-        <div>
+        <div class="mt-8">
           <!-- cards go here -->
           <div>
             <img src="./img/avocado Small.jpeg" alt="Cerulean Dessert">
@@ -60,8 +60,9 @@
           </div>
         </div>
 
-        <h4>Most Popular</h4>
-        <div>
+        <h4 class="font-bold mt-12 pb-2 border-b-2 border-gray-200">Most Popular</h4>
+
+        <div class="mt-8">
           <!-- cards go here -->
         </div>
 
