--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div>
       <nav>
         <div>
-          <h1 class="font-bold text-2xl p-4 border-b border-gray-100 text-center uppercase">
+          <h1 class="font-bold text-2xl p-4 border-b-2 border-b-primary text-center uppercase">
             <a href="/">See It Eat It || See Food</a>
           </h1>
         </div>
@@ -37,7 +37,7 @@
     </div>
 <!-- end navbar -->
     <main class="px-16 py-6">
-      <div>
+      <div class="text-primary">
         <a href="#">Log in</a>
         <a href="#">Sign up</a>
       </div>
@@ -47,7 +47,7 @@
       </header>
 
       <div>
-        <h4 class="font-bold mt-12 pb-2 border-b-2 border-gray-200">Current Dishes</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b-2 border-b-primary">Current Dishes</h4>
 
         <div class="mt-8">
           <!-- cards go here -->
@@ -60,7 +60,7 @@
           </div>
         </div>
 
-        <h4 class="font-bold mt-12 pb-2 border-b-2 border-gray-200">Most Popular</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b-2 border-b-primary">Most Popular</h4>
 
         <div class="mt-8">
           <!-- cards go here -->
