--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,12 @@
     </div>
 <!-- end navbar -->
     <main class="px-16 py-6">
-      <div class="text-primary">
-        <a href="#">Log in</a>
-        <a href="#">Sign up</a>
+      <div class="flex justify-end">
+        <a href="#" class="text-primary">Log in</a>
+        <a href="#" class="text-primary ml-2">Sign up</a>
       </div>
       <header>
-        <h2 class="text-6xl font-semibold">Erin's Brewhouse</h2>
+        <h2 class="text-6xl font-semibold">Erin's Pub</h2>
         <!-- <h3 class="text-2xl font-semibold">For Hikers</h3> -->
       </header>
 
@@ -66,8 +66,8 @@
           <!-- cards go here -->
         </div>
 
-        <div>
-          <div>Load More</div>
+        <div class="flex justify-center">
+          <div class="bg-secondary text-primary">Load More</div>
         </div>
       </div>
     </main>
