--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <nav>
         <div>
           <h1 class="font-bold text-2xl p-4 border-b-2 border-b-primary text-center uppercase">
-            <a href="/">See It Eat It || See Food</a>
+            <a href="/" class="">See It Eat It || See Food</a>
           </h1>
         </div>
           <ul>
@@ -36,8 +36,8 @@
       </nav>
     </div>
 <!-- end navbar -->
-    <main class="px-16 py-6">
-      <div class="flex justify-end">
+    <main class="px-16 py-6 bg-gray-100">
+      <div class="flex justify-center md:justify-end">
         <a href="#" class="text-primary">Log in</a>
         <a href="#" class="text-primary ml-2">Sign up</a>
       </div>
@@ -47,15 +47,15 @@
       </header>
 
       <div>
-        <h4 class="font-bold mt-12 pb-2 border-b-2 border-b-primary">Current Dishes</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-b-primary">Current Dishes</h4>
 
         <div class="mt-8">
           <!-- cards go here -->
-          <div>
-            <img src="./img/avocado Small.jpeg" alt="Cerulean Dessert">
-            <div>
-              <span>Granola</span>
-              <span>Recipe Author</span>
+          <div class="bg-white rounded overflow-hidden shadow-md">
+            <img src="./img/avocado Small.jpeg" alt="Cerulean Dessert" class=" w-full h-32 sm:48 object-cover">
+            <div class=" m-4">
+              <span class="font-bold">Avocado Toast</span>
+              <span class=" block text-gray-500 text-sm">Recipe Author</span>
             </div>
           </div>
         </div>
