--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,39 @@
 <body class="text-gray-600">
 
   <div class="grid md:grid-cols-3"> <!-- content wrapper -->
-    <div class=" md:col-span-1">
-      <nav>
-        <div>
+    <div class=" md:col-span-1 md:flex md:justify-end">
+      <nav class=" text-right">
+        <div class="flex justify-between items-center">
           <h1 class="font-bold text-2xl p-4 border-b-2 border-b-primary text-center uppercase">
             <a href="/" class="">See It Eat It || See Food</a>
           </h1>
+          <div class="px-4 cursor-pointer md:hidden" id="burger">
+            <svg  class="w-4"  xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+          </div>
         </div>
-          <ul>
-            <li>
-              <a href="#">
+          <ul class="text-md mt-6 hidden md:block" id="menu">
+            <li class="py-1">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-primary">
                 <span>Home</span>
-                <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <svg class="w-5 inline-block ml-2" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="py-1">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>About</span>
-                <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <svg class="w-5 inline-block ml-2" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="py-1">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-white" >
                 <span>Contact</span>
-                <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <svg class="w-5 inline-block ml-2" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
                 </svg>
               </a>
@@ -47,8 +52,8 @@
 <!-- end navbar -->
     <main class="px-16 py-6 bg-gray-100 md:col-span-2">
       <div class="flex justify-center md:justify-end">
-        <a href="#" class="text-primary btn border-">Log in</a>
-        <a href="#" class="text-primary ml-2 btn">Sign up</a>
+        <a href="#" class="text-primary btn hover:border-primary transition ease-out duration-1000 hover:bg-white transform hover:scale-125">Log in</a>
+        <a href="#" class="text-primary ml-2 btn hover:border-primary transition ease-out duration-1000 hover:bg-white transform hover:scale-125">Sign up</a>
       </div>
       <header>
         <h2 class="text-6xl font-semibold">Erin's Pub</h2>
@@ -60,18 +65,18 @@
 
         <div class="mt-8 grid lg:grid-cols-3 gap-8">
           <!-- cards go here -->
-          <div class="card">
+          <div class="card hover:shadow-xl transform hover:scale-125">
             <img src="./img/avocado Small.jpeg" alt="Cerulean Dessert" class=" w-full h-48 sm:48 object-cover">
             <div class=" m-4">
               <span class="font-bold">Avocado Toast</span>
-              <span class=" block text-gray-500 text-sm">Recipe Author</span>
+              <span class=" block text-gray-500 text-sm">Tangerine</span>
             </div>
             <div class="badge">
               <img class=" w-5 inline-block" src="img/icons8-hourglass.gif" alt="hourglass">
               <span>15 mins</span>
             </div>
           </div>
-          <div class="card">
+          <div class="card hover:shadow-xl transform hover:scale-125">
             <img src="./img/cerulean Small.png" alt="Cerulean Dessert" class=" w-full h-48 sm:48 object-cover">
             <div class=" m-4">
               <span class="font-bold">Dessert</span>
@@ -82,7 +87,7 @@
               <span>15 mins</span>
             </div>
           </div>
-          <div class="card">
+          <div class="card hover:shadow-xl transform hover:scale-125">
             <img src="./img/ramenAvery.png" alt="ramenAvery" class=" w-full h-48 sm:48 object-cover">
             <div class=" m-4">
               <span class="font-bold">Pork Ramen</span>
@@ -102,10 +107,11 @@
         </div>
 
         <div class="flex justify-center">
-          <div class="btn">Load More</div>
+          <div class="btn hover:border-primary transform hover:scale-125 hover:bg-white">Load More</div>
         </div>
       </div>
     </main>
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
